# IonsAnalysis

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Data/checkVar/checkToSum/: 1329822858.root  1329838727.root  1329853348.root
Data/checkVar/condor/: check.sub
Fragmentation/AboveL1/Boron/: Boron.root
Fragmentation/AboveL1/Carbon/: Carbon.root
Fragmentation/AboveL1/Oxygen/: Oxygen.root
Fragmentation/BelowL1/: README.txt
Fragmentation/BelowL1/Carbon/: Carbon.root
Fragmentation/BelowL1/Fractions/: Argon_purity.txt  Calcium_purity.txt  Phosphorus_purity.txt  Phosphorus_purity_goodOne.txt  Silicon_purity.txt  Sulfur_purity.txt  contamination_Boron.root  contamination_Carbon.root
Fragmentation/BelowL1/Oxygen/: Oxygen.root
Fragmentation/BelowL1/Phosphorus/: file_00001.root  file_00002.root  file_00003.root  file_00004.root  file_00005.root  file_00006.root  file_00007.root  file_00008.root  file_00009.root  file_00010.root  file_00011.root  file_00012.root  file_00013.root  file_00014.root  file_00015.root  file_00016.root  file_00017.root  file_00018.root  file_00019.root  file_00020.root  file_00021.root  file_00022.root  file_00023.root  file_00024.root  file_00025.root  file_00026.root  file_00027.root  file_00028.root  file_00029.root  file_00030.root  file_00031.root  file_00032.root  file_00033.root  file_00034.root  file_00035.root  file_00036.root  file_00037.root  file_00038.root  file_00039.root  file_00040.root  (+412 more)
Fragmentation/BelowL1/ProtonBinning/: contamination_Boron.root
Fragmentation/BelowL1/Silicon/: Silicon.root
Fragmentation/BelowL1/Sulfur/: Sulfur.root
Fragmentation/BelowL1/Templates/: Boron.root  Carbon.root  Nitrogen.root  Oxygen.root
IonsSelected/B/: B_output.root  output.root
IonsSelected/B/26_27/: file_00100.root  file_00101.root  file_00104.root  file_00105.root  file_00106.root  file_00108.root  file_00109.root  file_00110.root  file_00111.root  file_00112.root  file_00114.root  file_00115.root  file_00117.root  file_00118.root  file_00121.root  file_00123.root  file_00124.root  file_00125.root  file_00126.root  file_00128.root  file_00129.root  file_00130.root  file_00132.root  file_00133.root  file_00134.root  file_00135.root  file_00136.root  file_00137.root  file_00138.root  file_00139.root  file_00140.root  file_00141.root  file_00142.root  file_00143.root  file_00145.root  file_00146.root  file_00147.root  file_00149.root  file_00150.root  file_00152.root  (+658 more)
IonsSelected/C/: C_output.root  Coutput.root
IonsSelected/N/: N_output.root
IonsSelected/O/: O_output.root  Ooutput.root  output.root
IonsSelected/P/: P_output.root
IonsSelected/P/Fragments/June/: README.txt
IonsSelected/P/mc/: mc.root
IonsSelected/S/: S_output.root
IonsSelected/S/mc/: mc.root
IonsSelected/Si/: Si_output.root
Published/Galprop/: Ar.txt  Ca.txt  Cl.txt  Fe.txt  K.txt  P.txt  S.txt  Si.txt
Published/Zhen/flux_p/: plot_unfolded_flux.C
checkVar/: CMakeLists.txt
checkVar/src/: tc.cpp
data_test/: out.root
getData/: data.sub  find_and_sort.sh
getData/data_test/: try.root
getData/ntuples/: data_filelist.txt  file_00000.txt  file_00001.txt  file_00002.txt  file_00003.txt  file_00004.txt  file_00005.txt  file_00006.txt  file_00007.txt  file_00008.txt  file_00009.txt  file_00010.txt  file_00011.txt  file_00012.txt  file_00013.txt  file_00014.txt  file_00015.txt  file_00016.txt  file_00017.txt  file_00018.txt  file_00019.txt  file_00020.txt  file_00021.txt  file_00022.txt  file_00023.txt  file_00024.txt  file_00025.txt  file_00026.txt  file_00027.txt  file_00028.txt  file_00029.txt  file_00030.txt  file_00031.txt  file_00032.txt  file_00033.txt  file_00034.txt  file_00035.txt  file_00036.txt  file_00037.txt  file_00038.txt  (+2227 more)
include/: ChargeAnalysisManager.h  FluxUtility.h  PlotUtility.h  SplineUtility.h  StreamUtility.h  binning.h  definition.h  includes.h  selection.h  tools.h  utils.h
include/Efficiencies/: InnerTracker.cpp  InnerTracker.h  MySel.cpp  MySel.h  RTI.cpp  RTI.h  TRD.cpp  TRD.h  TofStandalone.cpp  TofStandalone.h  TrTrackEffSel.h  Tracker.cpp  Tracker.h  Trigger.cpp  Trigger.h
include/Templates/: BuildTemplatesSel.cpp  BuildTemplatesSel.h
output/: C.root
output/C/: dat.root
output/Flux/: Boron.root  Carbon.root  Oxygen.root  Silicon.root  Sulfur.root
src/: BuildFlux.cpp  BuildFluxForJack.cpp  ChargeAnalysisManager.cpp  CompareEff.cpp  CompareFlux.cpp  CreateTemplatesBelowL1.cpp  RigidityMap.cpp  VariableController.cpp  checkVar.cpp  eff.cpp  fitTemplates.cpp  fragmentation.cpp  hplot.cpp  plotVar.cpp  printEverything.cpp  selectEv.cpp
src/ControlPlots/: ClustersNumbers.cpp  InnerChargeDistribution.cpp  L1Distribution.cpp  L1UnbDistribution.cpp  L9UnbDistribution.cpp  SecondTrackVsFirst.cpp  TofDistribution.cpp
src/Efficiencies/: BuildAcceptance.cpp  DaqEff.cpp  InterpolateCorrections.cpp  L1Eff.cpp  L1EffUnb.cpp  TofEff.cpp  TrackChEff.cpp  TrackEff.cpp  TriggEff.cpp
src/Fragmentation/: AboveL1.cpp  BuildL1Template.cpp  CreateTemplatesBelowL1.cpp  EvaluateFragments.cpp  FitPurity.cpp  PurityMc.cpp  ShiftTemplates.cpp  fitTemplates.cpp  fragmentation.cpp
src/Plotting/: AcceptanceMC.cpp  BuildFileToPrint.cpp  CompareAcceptanceMC.cpp  CompareCorrections.cpp  CompareEff.cpp  CompareEffectiveAcc.cpp  CompareFlux.cpp  CompareGlobalMc.cpp  CompareL1ChargeSecTrack.cpp  CompareRates.cpp  CompareRatios.cpp  CompareRatiosAll.cpp  CompareUnfoldIteration.cpp  CompareWithPublished.cpp  PlotUnfoldingFactor.cpp  TestFluxFit.cpp  TotalCorrection.cpp  hplot.cpp  printEverything.cpp
src/Selection/: DataSelector.cpp  DistributionsSelector.cpp  Livetime.cpp  McSelector.cpp  RawAcceptance.cpp  SelectCounts.cpp  SelectPassedTree.cpp  TemplatesSelector.cpp  selectEv.cpp
src/SelectionEfficiency/: BuildTemplatesSel.cpp  InnerTracker.cpp  MySel.cpp  RTI.cpp  TRD.cpp  TofStandalone.cpp  Tracker.cpp  Trigger.cpp
src/Unfolding/: UnfoldAcceptance.cpp
